src/styles/editor.scss
.editor {
    text-align: left;
    height: 100%;
    padding: 10px 15px;
    overflow-wrap: break-word;
    overflow-y: scroll;
    outline: none;
    font-family: "Source Code Pro", monospace;
    font-size: 18px;
    line-height: 22px;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;

    .mobileInput {
        position: absolute;
        top: -2000px;
        left: -2000px;
    }

    .lineText {
        display: inline;
        position: relative;
        // top: -1px;
        margin-left: 8px;
    }

    .preWhiteSpace {
        white-space: pre-wrap;
    }

    .caret {
        opacity: 0.7;
        position: relative;
        top: -3px;
        -webkit-animation: blink 1.1s steps(1) ease-in-out infinite;
        -moz-animation: blink 1.1s steps(1) ease-in-out infinite;
        -o-animation: blink 1.1s steps(1) infinite;
        -ms-animation: blink 1.1s steps(1) infinite;
        animation: blink 1.1s steps(1) infinite;

        .caretAfter {
            content: "";
            position: absolute;
            top: 2px;
            width: 10px;
            height: 22px;
            z-index: 10;
        }

        @-moz-keyframes blink {
            50% {
                opacity: 0;
                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
                filter: alpha(opacity=0);
            }
        }
        @-webkit-keyframes blink {
            50% {
                opacity: 0;
                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
                filter: alpha(opacity=0);
            }
        }
        @-o-keyframes blink {
            50% {
                opacity: 0;
                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
                filter: alpha(opacity=0);
            }
        }
        @keyframes blink {
            50% {
                opacity: 0;
                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
                filter: alpha(opacity=0);
            }
        }
    }

    a {
        color: #1a87b5;
    }
}

.editorWithTopBar {
    height: calc(100% - 46px);
}

.curvedTop {
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

